# CMake-setup

./: CMakeLists.txt  CmakePresets.json  Makefile  README.md
src/: demo.cpp  hello.cpp  utils.cpp
src/calculator/: main.cpp
